2004-03-16 nalin
	* src/session.c: remove explict calls to chown(), which would be denied
	by SELinux in enforcing mode, instead expecting the helper to handle it
	all.
	* src/v5.c: remove explict calls to chown(), which would be denied by
	SELinux in enforcing mode, instead expecting the helper to handle it
	all.
	* src/v4.c: remove explict calls to chown(), which would be denied by
	SELinux in enforcing mode, instead expecting the helper to handle it
	all.
	* src/storetmp.c: pass the user's uid and gid to the helper, it already
	knows what to do.
	* src/tokens.c(tokens_useful): add.
	* src/session.c: when opening a session, create temporary tickets for
	grabbing tokens with the current permissions so that libkrb4 doesn't
	reject them, then clean them up, then create those for the user.

2004-03-10 nalin
	* src/pam_krb5_storetmp.c: if the filename pattern supplied is not a
	valid pattern (does not end with XXXXXX), delete the file instead,
	reporting success in the same way.
	* src/session.c(pam_sm_close_session): note ticket file deletions when
	debugging.
	* src/storetmp.c(_pam_krb5_storetmp_delete): add, to invoke the helper
	for removal of a file.
	* src/stash.c(_pam_krb5_stash_clean): add, to attempt to remove a file
	using the helper, falling back to unlink() if the helper fails.
	* src/v4.c(v4_destroy): use _pam_krb5_stash_clean instead of unlink()
	to remove ticket files.
	* src/v5.c(v5_destroy): use _pam_krb5_stash_clean instead of unlink()
	to remove ccache files.

2004-02-27 nalin
	* src/session.c(pam_sm_open_session): only set variables if the ticket
	files have non-zero-length filenames.

2004-02-27 nalin
	* src/storetmp.c(_pam_krb5_storetmp_data): open /dev/null three times to
	ensure that pipe() won't give us any stdio descriptors.  Reintroduce the
	call to execl() which got dropped earlier.

2004-02-27 nalin
	* src/pam_krb5_storetmp.c: add this helper, which creates a file using
	mkstemp, filling it with supplied data.